--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -128,7 +128,7 @@
   }
   .hero-wrap .subheading {
     font-size: 1.5rem;
-    color: #f15d30;
+    color: var(--theme);
     font-family: "Arizonia", cursive;
   }
   .home-hero .heading-description {
