--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -378,8 +378,8 @@ nav ul li:hover > .submenu {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  padding: 50px 0;
+  min-height: 100vh;
+  /* padding: 50px 0; */
 }
 
 .intro-container {
@@ -427,6 +427,7 @@ nav ul li:hover > .submenu {
   object-fit: cover;
   transition: 0.5s;
   filter: grayscale(100%);
+  animation: pulse 3s infinite;
 }
 .intro-img img:hover {
   filter: grayscale(0%);
@@ -446,6 +447,25 @@ nav ul li:hover > .submenu {
   z-index: 2;
   margin-left: -50px;
   margin-top: 50px;
+}
+@keyframes pulse {
+  0% {
+    transform: scale(0.95);
+    transform: translate(0, 0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+
+  70% {
+    transform: scale(1);
+    transform: translate(0, 10px);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+
+  100% {
+    transform: scale(0.95);
+    transform: translate(0, 0);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
 }
 /* Media Queries */
 @media only screen and (max-width: 1500px) {
@@ -2435,12 +2455,25 @@ input[type="radio"] {
   font-size: 3rem;
 }
 .itinerary-description {
+  letter-spacing: 1px;
+  width: 80%;
+  border-bottom: 2px solid var(--theme);
+  padding-bottom: 25px;
   margin: auto;
   margin-top: 30px;
   margin-bottom: 30px;
+}
+
+.itinerary-description p {
+  width: 80%;
+  margin: auto;
+  font-family: "Lato", cursive;
+  font-weight: 700;
   font-size: 1.3rem;
-  letter-spacing: 1px;
-  font-family: "Averia Serif Libre", cursive;
+  margin-bottom: 15px;
+}
+.itinerary-description p:last-child {
+  margin-bottom: 0;
 }
 
 .itinerary-list {
