--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3183,3 +3183,87 @@ input[type="number"]::-webkit-outer-spin-button {
     padding: 25px 0;
   }
 }
+
+/* Trekking Description */
+
+.trekking-container {
+  width: 70%;
+  margin: 50px auto;
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.trekking-container h1 {
+  width: 100%;
+  font-size: 2.5rem;
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-family: "Averia Serif Libre", cursive;
+  text-align: center;
+  padding: 15px 50px;
+  border-bottom: 5px solid var(--theme);
+}
+.trekking-container div {
+  margin: 20px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.trekking-container div img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-top: 20px;
+  transition: all 0.8s ease-in-out;
+  box-shadow: 0 0 10px var(--dark);
+  max-height: 600px;
+}
+.trekking-container div h2 {
+  width: 100%;
+
+  font-size: 1.5rem;
+  font-weight: 700;
+  font-family: "Averia Serif Libre", cursive;
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+  border-bottom: 3px solid var(--theme);
+  text-align: center;
+}
+.trekking-container div p {
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  font-family: "Lato", sans-serif;
+  text-align: start;
+  margin: 5px 0;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 700px) {
+  .trekking-container {
+    width: 80%;
+  }
+  .trekking-container h1 {
+    font-size: 1.5rem;
+    padding: 25px 0;
+  }
+  .trekking-container div h2 {
+    font-size: 1.2rem;
+  }
+  .trekking-container div p {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .trekking-container div h2 {
+    font-size: 1.1rem;
+  }
+}
